foundation-objs/main/default/objects/Case_Assignment_Based_Rule__mdt/Case_Assignment_Based_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Case Assignment Based Rule</label>
    <pluralLabel>Case Assignment Based Rules</pluralLabel>
</CustomObject>