foundation-objs/main/default/objects/Case_Assignment_Based_Rule__mdt/fields/AssignedUser__c.field-meta.xml
<CustomField>
    <fullName>AssignedUser__c</fullName>
    <label>AssignedUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>