foundation-objs/main/default/objects/Case_Assignment_Based_Rule__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <type>TextArea</type>
</CustomField>