foundation-objs/main/default/objects/Case_Assignment_Based_Rule__mdt/fields/RecordTypes__c.field-meta.xml
<CustomField>
    <fullName>RecordTypes__c</fullName>
    <label>RecordTypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>