foundation-objs/main/default/objects/Case_Assignment_Based_Rule__mdt/fields/runInsert__c.field-meta.xml
<CustomField>
    <fullName>runInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runInsert</label>
    <type>Checkbox</type>
</CustomField>