foundation-objs/main/default/objects/Case_Assignment_Based_Rule__mdt/fields/runUpdate__c.field-meta.xml
<CustomField>
    <fullName>runUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runUpdate</label>
    <type>Checkbox</type>
</CustomField>